WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158520
LayerTreeHost should be created with a WebPage reference instead of a pointer
https://bugs.webkit.org/show_bug.cgi?id=158520
Summary
LayerTreeHost should be created with a WebPage reference instead of a pointer
Carlos Garcia Campos
Reported
2016-06-08 03:01:14 PDT
We are indeed creating the LayerTreeHost always from a WebPage reference but getting its address to pass it to the LayerTreeHost create() function.
Attachments
Patch
(23.25 KB, patch)
2016-06-08 03:02 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-06-08 03:02:52 PDT
Created
attachment 280794
[details]
Patch
Carlos Garcia Campos
Comment 2
2016-06-08 05:11:53 PDT
Committed
r201802
: <
http://trac.webkit.org/changeset/201802
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug